--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +12,13 @@
     <link href="https://cdn.jsdelivr.net/npm/lucide-static@0.321.0/font/lucide.min.css" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
-        body { font-family: 'Inter', sans-serif; }
+
+        body {
+            font-family: 'Inter', sans-serif;
+        }
     </style>
 </head>
+
 <body class="bg-slate-50">
     <div id="root"></div>
 
@@ -22,14 +27,20 @@
         import { getFirestore, collection, onSnapshot, doc, updateDoc, addDoc, query, orderBy } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js";
         import { getAuth, signInAnonymously, onAuthStateChanged, signInWithCustomToken } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js";
 
-        // Configuración de Firebase (inyectada por el entorno)
-        const firebaseConfig = JSON.parse(__firebase_config);
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
-        const auth = getAuth(app);
-        const appId = typeof __app_id !== 'undefined' ? __app_id : 'ceap-dgeti-tracker';
+        try {
+            const firebaseConfig = JSON.parse(__firebase_config);
+            const app = initializeApp(firebaseConfig);
+            const db = getFirestore(app);
+            const auth = getAuth(app);
+            const appId = typeof __app_id !== 'undefined' ? __app_id : 'ceap-dgeti-tracker';
 
-        window.FB_UTILS = { db, auth, appId, collection, onSnapshot, doc, updateDoc, addDoc, query, orderBy, signInAnonymously, onAuthStateChanged, signInWithCustomToken };
+            window.FB_UTILS = { db, auth, appId, collection, onSnapshot, doc, updateDoc, addDoc, query, orderBy, signInAnonymously, onAuthStateChanged, signInWithCustomToken };
+
+            // Disparar evento para avisar a React que Firebase está listo
+            window.dispatchEvent(new Event('firebase-ready'));
+        } catch (e) {
+            console.error("Error inicializando Firebase:", e);
+        }
     </script>
 
     <script type="text/babel">
@@ -44,45 +55,64 @@
         ];
 
         const App = () => {
+            const [fbReady, setFbReady] = useState(!!window.FB_UTILS);
             const [planteles, setPlanteles] = useState([]);
             const [user, setUser] = useState(null);
             const [filtro, setFiltro] = useState('');
             const [selectedPlantel, setSelectedPlantel] = useState(null);
-            const [isEditing, setIsEditing] = useState(false);
             const [loading, setLoading] = useState(true);
 
-            const { db, auth, appId, collection, onSnapshot, doc, updateDoc, addDoc, query, signInAnonymously, onAuthStateChanged, signInWithCustomToken } = window.FB_UTILS;
-
-            // 1. Manejo de Autenticación
             useEffect(() => {
-                const initAuth = async () => {
-                    if (typeof __initial_auth_token !== 'undefined' && __initial_auth_token) {
-                        await signInWithCustomToken(auth, __initial_auth_token);
-                    } else {
-                        await signInAnonymously(auth);
-                    }
-                };
-                initAuth();
-                return onAuthStateChanged(auth, setUser);
+                const handleReady = () => setFbReady(true);
+                window.addEventListener('firebase-ready', handleReady);
+                return () => window.removeEventListener('firebase-ready', handleReady);
             }, []);
 
-            // 2. Suscripción a Datos en Tiempo Real
             useEffect(() => {
-                if (!user) return;
+                if (!fbReady) return;
 
+                const { db, auth, appId, signInAnonymously, onAuthStateChanged, signInWithCustomToken, collection, onSnapshot } = window.FB_UTILS;
+
+                const initAuth = async () => {
+                    try {
+                        if (typeof __initial_auth_token !== 'undefined' && __initial_auth_token) {
+                            await signInWithCustomToken(auth, __initial_auth_token);
+                        } else {
+                            await signInAnonymously(auth);
+                        }
+                    } catch (err) {
+                        console.error("Auth error:", err);
+                    }
+                };
+
+                initAuth();
+                const unsubAuth = onAuthStateChanged(auth, setUser);
+
+                return () => unsubAuth();
+            }, [fbReady]);
+
+            useEffect(() => {
+                if (!user || !fbReady) return;
+
+                const { db, appId, collection, onSnapshot } = window.FB_UTILS;
                 const colRef = collection(db, 'artifacts', appId, 'public', 'data', 'planteles');
-                const unsubscribe = onSnapshot(colRef, 
+
+                const unsubscribe = onSnapshot(colRef,
                     (snapshot) => {
                         const data = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
                         setPlanteles(data);
                         setLoading(false);
                     },
-                    (error) => console.error("Error al obtener datos:", error)
+                    (error) => {
+                        console.error("Firestore error:", error);
+                        setLoading(false);
+                    }
                 );
                 return () => unsubscribe();
-            }, [user]);
+            }, [user, fbReady]);
 
             const updatePlantel = async (id, newData) => {
+                const { db, appId, doc, updateDoc } = window.FB_UTILS;
                 const docRef = doc(db, 'artifacts', appId, 'public', 'data', 'planteles', id);
                 await updateDoc(docRef, newData);
                 setSelectedPlantel(prev => ({ ...prev, ...newData }));
@@ -91,6 +121,7 @@
             const addNewPlantel = async () => {
                 const nombre = prompt("Nombre del Plantel:");
                 if (!nombre) return;
+                const { db, appId, collection, addDoc } = window.FB_UTILS;
                 const colRef = collection(db, 'artifacts', appId, 'public', 'data', 'planteles');
                 await addDoc(colRef, {
                     nombre,
@@ -107,14 +138,17 @@
                 return ((index + 1) / STAGES.length) * 100;
             };
 
-            const plantelesFiltrados = planteles.filter(p => 
-                p.nombre?.toLowerCase().includes(filtro.toLowerCase())
+            if (!fbReady || loading) return (
+                <div className="h-screen flex items-center justify-center bg-slate-50">
+                    <div className="text-center">
+                        <div className="animate-spin rounded-full h-12 w-12 border-b-2 border-blue-600 mx-auto mb-4"></div>
+                        <p className="text-slate-500 font-medium">Conectando con base de datos...</p>
+                    </div>
+                </div>
             );
 
-            if (loading) return (
-                <div className="h-screen flex items-center justify-center bg-slate-50">
-                    <div className="animate-spin rounded-full h-12 w-12 border-b-2 border-blue-600"></div>
-                </div>
+            const plantelesFiltrados = planteles.filter(p =>
+                p.nombre?.toLowerCase().includes(filtro.toLowerCase())
             );
 
             return (
@@ -122,16 +156,16 @@
                     <header className="max-w-6xl mx-auto mb-8 flex flex-col md:flex-row justify-between items-center gap-4">
                         <div>
                             <h1 className="text-3xl font-bold text-slate-800">CEAP DGETI Cloud</h1>
-                            <p className="text-slate-500 text-sm">Persistencia en tiempo real • {user?.uid.substring(0,8)}</p>
+                            <p className="text-slate-500 text-sm">Persistencia en tiempo real • {user?.uid?.substring(0, 8)}</p>
                         </div>
                         <div className="flex gap-2 w-full md:w-auto">
-                            <input 
-                                type="text" 
+                            <input
+                                type="text"
                                 placeholder="Buscar plantel..."
                                 className="p-2 border rounded-lg flex-grow md:w-64 focus:ring-2 focus:ring-blue-500 outline-none"
                                 onChange={(e) => setFiltro(e.target.value)}
                             />
-                            <button 
+                            <button
                                 onClick={addNewPlantel}
                                 className="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition-colors"
                             > + </button>
@@ -139,7 +173,6 @@
                     </header>
 
                     <main className="max-w-6xl mx-auto grid grid-cols-1 lg:grid-cols-3 gap-8">
-                        {/* Listado Principal */}
                         <div className="lg:col-span-2 bg-white rounded-xl shadow-sm border overflow-hidden">
                             <table className="w-full text-left">
                                 <thead className="bg-slate-50 border-b">
@@ -158,15 +191,14 @@
                                             </td>
                                             <td className="px-6 py-4">
                                                 <div className="w-24 bg-slate-100 h-1.5 rounded-full mb-1">
-                                                    <div className="bg-blue-500 h-full rounded-full transition-all duration-500" style={{width: `${calculateProgress(p.fase)}%`}}></div>
+                                                    <div className="bg-blue-500 h-full rounded-full transition-all duration-500" style={{ width: `${calculateProgress(p.fase)}%` }}></div>
                                                 </div>
                                                 <span className="text-[10px] text-slate-400 uppercase font-bold">{p.fase}</span>
                                             </td>
                                             <td className="px-6 py-4">
-                                                <span className={`px-2 py-1 rounded-full text-[10px] font-bold uppercase ${
-                                                    p.estatus === 'completado' ? 'bg-green-100 text-green-700' : 
-                                                    p.estatus === 'retrasado' ? 'bg-red-100 text-red-700' : 'bg-amber-100 text-amber-700'
-                                                }`}>
+                                                <span className={`px-2 py-1 rounded-full text-[10px] font-bold uppercase ${p.estatus === 'completado' ? 'bg-green-100 text-green-700' :
+                                                        p.estatus === 'retrasado' ? 'bg-red-100 text-red-700' : 'bg-amber-100 text-amber-700'
+                                                    }`}>
                                                     {p.estatus}
                                                 </span>
                                             </td>
@@ -176,19 +208,18 @@
                             </table>
                         </div>
 
-                        {/* Panel de Edición Detallada */}
                         <div className="lg:col-span-1">
                             {selectedPlantel ? (
                                 <div className="bg-white p-6 rounded-xl shadow-lg border-t-4 border-blue-600">
                                     <div className="flex justify-between items-center mb-4">
                                         <h2 className="text-xl font-bold">{selectedPlantel.nombre}</h2>
-                                        <span className="text-xs font-bold text-slate-400">ID: {selectedPlantel.id.substring(0,5)}</span>
+                                        <span className="text-xs font-bold text-slate-400">ID: {selectedPlantel.id.substring(0, 5)}</span>
                                     </div>
-                                    
+
                                     <div className="space-y-4">
                                         <div>
                                             <label className="text-xs font-bold text-slate-400 block mb-1">CICLO ESCOLAR</label>
-                                            <select 
+                                            <select
                                                 value={selectedPlantel.ciclo}
                                                 onChange={(e) => updatePlantel(selectedPlantel.id, { ciclo: e.target.value })}
                                                 className="w-full p-2 border rounded bg-slate-50 font-bold text-blue-600"
@@ -200,7 +231,7 @@
 
                                         <div>
                                             <label className="text-xs font-bold text-slate-400 block mb-1">FASE ACTUAL</label>
-                                            <select 
+                                            <select
                                                 value={selectedPlantel.fase}
                                                 onChange={(e) => updatePlantel(selectedPlantel.id, { fase: e.target.value })}
                                                 className="w-full p-2 border rounded"
@@ -211,7 +242,7 @@
 
                                         <div>
                                             <label className="text-xs font-bold text-slate-400 block mb-1">ESTATUS</label>
-                                            <select 
+                                            <select
                                                 value={selectedPlantel.estatus}
                                                 onChange={(e) => updatePlantel(selectedPlantel.id, { estatus: e.target.value })}
                                                 className="w-full p-2 border rounded"
@@ -224,17 +255,17 @@
 
                                         <div>
                                             <label className="text-xs font-bold text-slate-400 block mb-1">OBSERVACIONES / DESVÍOS</label>
-                                            <textarea 
+                                            <textarea
                                                 value={selectedPlantel.observaciones}
                                                 onBlur={(e) => updatePlantel(selectedPlantel.id, { observaciones: e.target.value })}
-                                                onChange={(e) => setSelectedPlantel({...selectedPlantel, observaciones: e.target.value})}
+                                                onChange={(e) => setSelectedPlantel({ ...selectedPlantel, observaciones: e.target.value })}
                                                 className="w-full p-2 border rounded text-sm h-24 italic"
                                             />
                                         </div>
 
                                         <div className="p-3 bg-blue-50 rounded-lg">
                                             <label className="text-[10px] font-bold text-blue-600 block mb-1">FECHA COMPROMISO CIERRE FASE</label>
-                                            <input 
+                                            <input
                                                 type="date"
                                                 value={selectedPlantel.proximaFecha}
                                                 onChange={(e) => updatePlantel(selectedPlantel.id, { proximaFecha: e.target.value })}
@@ -258,4 +289,5 @@
         root.render(<App />);
     </script>
 </body>
+
 </html>
