fix: handle fetch errors and improve item rendering in fetchItems function

--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CEAP Traker</title>
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/lucide-static@0.321.0/font/lucide.min.css" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
@@ -20,7 +16,7 @@
 </head>
 
 <body class="bg-slate-50">
-    <div id="root"></div>
+    <h1>CEAP Traker</h1>
     <form id="add-item-form">
         <input id="item-input" type="text" placeholder="Nuevo item" required />
         <button type="submit">Agregar</button>
