feat: update item structure and form inputs for enhanced item management

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 <body class="bg-slate-50">
     <h1>CEAP Traker</h1>
     <form id="add-item-form">
-        <input id="item-input" type="text" placeholder="Nuevo item" required />
+        <input id="plantel-input" type="text" placeholder="Plantel" required />
+        <input id="ciclo-input" type="text" placeholder="Ciclo CEAP" />
+        <input id="fase-input" type="text" placeholder="Fase" />
+        <input id="estatus-input" type="text" placeholder="Estatus" />
+        <input id="observaciones-input" type="text" placeholder="Observaciones" />
+        <input id="fecha-estimada-input" type="date" placeholder="Fecha Estimada" />
+        <input id="fecha-concluido-input" type="date" placeholder="Fecha Concluido" />
         <button type="submit">Agregar</button>
     </form>
     <ul id="items-list"></ul>
