Fix: Update references from CEaP to CEAP across documentation, components, and services

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Sistema de Seguimiento CEaP - DGETI Guanajuato"
+      content="Sistema de Seguimiento CEAP - DGETI Guanajuato"
     />
-    <title>CEaP Tracker</title>
+    <title>CEAP Tracker</title>
   </head>
   <body>
     <noscript>Necesitas habilitar JavaScript para usar esta aplicación.</noscript>
